# phantomlint

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: publish.yml
examples/: sample.phantomlint.json
examples/sample/frontend/: app.jsx
examples/sample/schema/: schema.sql
phantomlint/: __init__.py  cli.py  core.py
phantomlint/examples/sample/api/: server.js
tests/: test_drift.py
