[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "phantomlint"
version = "0.1.1"
description = "Static linter that catches phantom features (frontend/API/schema drift) before they ship. Zero deps, zero LLM."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "GolemLabs.ai" }]
keywords = ["contract-testing", "drift", "linter", "api", "schema", "phantom-features", "static-analysis", "devtools"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/GolemLabs-ai/phantomlint"
Issues = "https://github.com/GolemLabs-ai/phantomlint/issues"
Repository = "https://github.com/GolemLabs-ai/phantomlint"

[project.scripts]
phantomlint = "phantomlint.cli:main"

# The runnable sample lives at phantomlint/examples/ (inside the package), so it
# ships in the wheel automatically and `phantomlint --demo` works after a plain
# `pip install phantomlint` (no git clone, no path).
[tool.hatch.build.targets.wheel]
packages = ["phantomlint"]
artifacts = ["phantomlint/examples/**/*"]
